tests/NormalTests/paczka1/fuzzy1/33179583.err
Error in line 3: 54ezcB3Z S639 91,0
Error in line 4: HfGpZ A434 90,6
Error in line 6: HfGpZ S639 54,1
Error in line 9: HfGpZ A686 17,7
Error in line 26: NAgHUl4bCkO S639 32,3
Error in line 8: A686 S639 23,3
Error in line 25: 2QhrH4 S639 28,8
